--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,72 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	id="WebApp_ID" version="2.5">
-	<display-name>Vaadin Web Application</display-name>
-    <distributable />
-    
-    
-	<context-param>
-		<description>Vaadin production mode</description>
-		<param-name>productionMode</param-name>
-		<param-value>true</param-value>
-	</context-param>
+         xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         id="WebApp_ID" version="2.5">
+    <display-name>Vaadin Web Application</display-name>
+    <distributable/>
 
-	<!-- To load the Spring context -->
-	<listener>
-		<listener-class>org.activiti.explorer.servlet.WebConfigurer</listener-class>
-	</listener>
 
-	<!-- To allow session-scoped beans in Spring -->
-	<listener>
-		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-	</listener>
+    <context-param>
+        <description>Vaadin production mode</description>
+        <param-name>productionMode</param-name>
+        <param-value>true</param-value>
+    </context-param>
 
-	<filter>
-		<filter-name>UIFilter</filter-name>
-		<filter-class>org.activiti.explorer.filter.ExplorerFilter</filter-class>
-	</filter>
-  
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>WEB-INF/spring_mvc_modeler.xml</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <servlet>
+        <servlet-name>ModelRestServlet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ModelRestServlet</servlet-name>
+        <url-pattern>/service/*</url-pattern>
+    </servlet-mapping>
+
+    <!-- To load the Spring context -->
+    <listener>
+        <listener-class>org.activiti.explorer.servlet.WebConfigurer</listener-class>
+    </listener>
+
+    <!-- To allow session-scoped beans in Spring -->
+    <listener>
+        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+    </listener>
+
+    <filter>
+        <filter-name>UIFilter</filter-name>
+        <filter-class>org.activiti.explorer.filter.ExplorerFilter</filter-class>
+    </filter>
+
     <filter>
         <filter-name>JSONPFilter</filter-name>
         <filter-class>org.activiti.explorer.servlet.JsonpCallbackFilter</filter-class>
     </filter>
 
-	<filter-mapping>
-		<filter-name>UIFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-  
+    <filter-mapping>
+        <filter-name>UIFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <filter-mapping>
         <filter-name>JSONPFilter</filter-name>
         <url-pattern>/service/*</url-pattern>
     </filter-mapping>
 
-	<servlet>
-		<servlet-name>Vaadin Application Servlet</servlet-name>
-		<servlet-class>org.activiti.explorer.servlet.ExplorerApplicationServlet</servlet-class>
-		<init-param>
-			<param-name>widgetset</param-name>
-			<param-value>org.activiti.explorer.CustomWidgetset</param-value>
-		</init-param>
-	</servlet>
+    <servlet>
+        <servlet-name>Vaadin Application Servlet</servlet-name>
+        <servlet-class>org.activiti.explorer.servlet.ExplorerApplicationServlet</servlet-class>
+        <init-param>
+            <param-name>widgetset</param-name>
+            <param-value>org.activiti.explorer.CustomWidgetset</param-value>
+        </init-param>
+    </servlet>
 
-	<servlet-mapping>
-		<servlet-name>Vaadin Application Servlet</servlet-name>
-		<url-pattern>/ui/*</url-pattern>
-	</servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Vaadin Application Servlet</servlet-name>
+        <url-pattern>/ui/*</url-pattern>
+    </servlet-mapping>
 
-	<servlet-mapping>
-		<servlet-name>Vaadin Application Servlet</servlet-name>
-		<url-pattern>/VAADIN/*</url-pattern>
-	</servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Vaadin Application Servlet</servlet-name>
+        <url-pattern>/VAADIN/*</url-pattern>
+    </servlet-mapping>
 
-	<!-- Session timeout on one day -->
-	<session-config>
-		<session-timeout>480</session-timeout>
-	</session-config>
-  
+    <!-- Session timeout on one day -->
+    <session-config>
+        <session-timeout>480</session-timeout>
+    </session-config>
 
 
 </web-app>
