--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'org.springframework:spring-webmvc:4.1.5.RELEASE'
     compile 'org.slf4j:slf4j-api:1.7.6'
     compile 'commons-io:commons-io:2.0.1'
+    compile 'com.alibaba:fastjson:1.2.46'
 //    compile 'org.activiti:activiti-engine:5.22.0'
 //    compile 'org.activiti:activiti-spring:5.22.0'
 //    compile 'org.activiti:activiti-modeler:5.22.0' 使用自己的类，挪到了com.ectongs.activiti.editor
