--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile ('org.activiti:activiti-explorer:5.22.0') {
         exclude group: 'org.vaadin.addons'
     }
+    compile group: 'xml-apis', name: 'xml-apis-ext', version: '1.3.04'
 
     // Use JUnit test framework
     testCompile 'junit:junit:4.12'
